# voz

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
scripts/: benchmark_alternatives.py  benchmark_conversation.py  benchmark_latency.py  download_coraa_references.py  download_missing_references.py  download_models.py  download_youtube_references.py  generate_samples.py  install_openvoice.sh  validate_reference_audio.py
src/: config.py  conversation.py  history.py  llm_ollama.py  pipeline.py  server.py  stt_mlx.py  stt_whisper.py  tts_chatterbox.py  tts_kokoro.py  tts_openvoice.py
static/: chat.html
tests/: conftest.py  test_config.py  test_conversation.py  test_pipeline.py  test_server.py
