[project]
name = "voz"
version = "0.1.0"
description = "Voz: self-hosted voice conversational AI for BR-PT and AR-ES"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chatterbox-tts>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "torchaudio>=2.0.0",
    "python-multipart>=0.0.9",
    "soundfile>=0.12.0",
    "ml-dtypes>=0.5.0",
    "onnx>=1.17.0,<1.18",
    "datasets>=4.8.3",
    "resemble-perth>=1.0.1",
    "setuptools>=82.0.1",
    "kokoro>=0.9.0",
    "httpx>=0.27",
    "faster-whisper>=1.0.0",
    # Apple Silicon-only: native MLX backend for Whisper, ~5-7x faster than
    # faster-whisper int8 on CPU. Skipped on Linux/Windows (PEP 508 marker).
    "mlx-whisper>=0.4 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

# OpenVoice V2 has conflicting deps (gradio 3.x, numpy 1.22).
# Install separately if needed: pip install git+https://github.com/myshell-ai/OpenVoice.git

[project.scripts]
voz = "src.server:main"

[dependency-groups]
dev = ["pytest>=8.0"]
